Fixed animation on small screens

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -56,7 +56,7 @@ header
 .hero
   position: relative
   +flex-direction(row)
-  +justify-content(flex-end)
+  +justify-content(flex-start)
   height: 100vh
   color: $white
   padding: 125px 150px
@@ -70,7 +70,6 @@ header
     z-index: -1
 
 .heroContent
-  right: -1000px
   text-align: right
   width: 33%
   max-height: 70%
@@ -139,10 +138,13 @@ img#roboarm
 
 @media (max-width: 650px)
   .hero
-    +justify-content(space-between)
+    +justify-content(flex-start)
   p.tagline
     font-size: 1em
     text-align: left
+@media (max-width: 430px)
+  .hero
+    padding-left: 0%
 
 /*--------------------
  * 	Our Work Section
